Fixes a formatting issue on the MovieCards where the text was shifted too far to the right.

--- a/TokuCinema/src/styles/components/moviecard/mobile.scss
+++ b/TokuCinema/src/styles/components/moviecard/mobile.scss
@@ -2,7 +2,7 @@
 
 .movie-card-content {
     width: 100%;
-    margin-left: 170px;
+    margin-left: 10px;
     margin-right: 10px;
     display: flex;
     align-items: center;
